--- a/sfml-shader-test/sfml-shader-test/sfml-shader-test.vcxproj.filters
+++ b/sfml-shader-test/sfml-shader-test/sfml-shader-test.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="PixelStormEffect.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ShaderManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="shaders\wave.vert" />
@@ -41,6 +44,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="PixelStormEffect.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ShaderManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
