Update - Managed to make the sprites all light up when the last sprite is being hit by a ray.

--- a/sfml-shader-test/sfml-shader-test/sfml-shader-test.vcxproj
+++ b/sfml-shader-test/sfml-shader-test/sfml-shader-test.vcxproj
@@ -166,6 +166,7 @@
   <ItemGroup>
     <None Include="shaders\blink.frag" />
     <None Include="shaders\lighting.frag" />
+    <None Include="shaders\lighting.vert" />
     <None Include="shaders\storm.vert" />
     <None Include="shaders\wave.vert" />
   </ItemGroup>
